@@ -31,6 +31,7 @@ Version 0.4.0 - ??
 - [new] Add this() function to WFObject to make it easier to use KVC magic on "current" object.
 - [new] Add a smarty modifier plugin to json encode data.
 - [new] Add nullPlaceholder support to WFYAHOO_widget_AutoComplete.
+- [new] Add support for tabIndex to WFWidget. Add to WFCheckbox, WFTextField, WFSelect.
 
 Version 0.3.9 - 10/21/2010
 - [new] Add WFRequestController->isMobileBrowser()
